<resources>
    <string name="app_name">OnBoard</string>
    <string name="action_settings">Settings</string>
    <string name="action_setting" />
    <string name="button_send">Send</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="button_show">Show</string>
    <string name="button_users">Users</string>
    <string name="title_activity_list_user">ListUserActivity</string>
    <string name="title_activity_user_information">UserInformationActivity</string>
    <string name="button_users_info">Info</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="button_internet">Http</string>
    <string name="title_activity_request_test">RequestTest</string>
    <string name="title_activity_http_request">HttpRequestActivity</string>
    <string name="http_test">Http</string>
    <string name="title_activity_test_http_request">testHttpRequest</string>
    <string name="title_activity_show_user_details">ShowUserDetails</string>
    <string name="title_activity_json_volley">JsonVolleyActivity</string>
    <string name="back">Back</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="add">New</string>
    <string name="title_activity_inserted">InsertedActivity</string>
    <string name="title_activity_change">ChangeActivity</string>
    <string name="title_activity_user_information_final">UserInformationFinalActivity</string>
    <string name="complete">Final</string>
    <string name="title_activity_user_details2">UserDetails2</string>
    <string name="novo">New</string>
    <string name="title_activity_new_user2">NewUser2</string>
</resources>
